Added missing label for file search type 'image'

--- a/src/main/webapp/resources/JahiaSearch.properties
+++ b/src/main/webapp/resources/JahiaSearch.properties
@@ -73,6 +73,7 @@ searchForm.date.to = to
 searchForm.date.today = today
 searchForm.fileType.archive = Archive
 searchForm.fileType.excel = Microsoft Excel
+searchForm.fileType.image = Image
 searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
