--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
 	                        <package-name>${project.name}</package-name>
 	                        <depends>Default Jahia Templates</depends>
                             <root-folder>${project.artifactId}</root-folder>
+                            <module-type>module</module-type>
 	                    </manifestEntries>
 	                </archive>
                 </configuration>
