--- a/pom.xml
+++ b/pom.xml
@@ -77,16 +77,16 @@
   <parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>jahia-modules</artifactId>
-    <version>7.0.0.1</version>
+    <version>7.0.0.2-SNAPSHOT</version>
   </parent>
   <artifactId>search</artifactId>
   <packaging>bundle</packaging>
   <name>Jahia Search</name>
   <description>Jahia template module for using simple and advanced content search features.</description>
   <scm>
-    <connection>scm:svn:https://devtools.jahia.com/svn/jahia/tags/JAHIA_7_0_0_1/modules/search</connection>
-    <developerConnection>scm:svn:https://devtools.jahia.com/svn/jahia/tags/JAHIA_7_0_0_1/modules/search</developerConnection>
-    <url>https://devtools.jahia.com/svn/jahia/tags/JAHIA_7_0_0_1/modules/search</url>
+    <connection>scm:svn:https://devtools.jahia.com/svn/jahia/tags/JAHIA_7.0.0.2-SNAPSHOT/modules/search</connection>
+    <developerConnection>scm:svn:https://devtools.jahia.com/svn/jahia/tags/JAHIA_7.0.0.2-SNAPSHOT/modules/search</developerConnection>
+    <url>https://devtools.jahia.com/svn/jahia/tags/JAHIA_7.0.0.2-SNAPSHOT/modules/search</url>
   </scm>
   <repositories>
     <repository>
