--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     =                   JAHIA'S DUAL LICENSING - IMPORTANT INFORMATION                       =
     ==========================================================================================
 
-        Copyright (C) 2002-2014 Jahia Solutions Group SA. All rights reserved.
+        Copyright (C) 2002-2015 Jahia Solutions Group SA. All rights reserved.
 
         THIS FILE IS AVAILABLE UNDER TWO DIFFERENT LICENSES:
         1/GPL OR 2/JSEL
@@ -81,13 +81,14 @@
         <version>7.1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>search</artifactId>
+	<version>7.1.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <name>Jahia Search</name>
     <description>Jahia template module for using simple and advanced content search features.</description>
     <scm>
-        <connection>scm:svn:https://devtools.jahia.com/svn/jahia/trunk/modules/search</connection>
-        <developerConnection>scm:svn:https://devtools.jahia.com/svn/jahia/trunk/modules/search</developerConnection>
-        <url>https://devtools.jahia.com/svn/jahia/trunk/modules/search</url>
+        <connection>scm:git:git@github.com:Jahia/search.git</connection>
+        <developerConnection>scm:git:git@github.com:Jahia/search.git</developerConnection>
+        <url>scm:git:git@github.com:Jahia/search.git</url>
     </scm>
 
     <properties>
