--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
         <version>7.1.0.0</version>
     </parent>
     <artifactId>search</artifactId>
-	<version>7.1.0</version>
+	<version>7.1.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <name>Jahia Search</name>
     <description>Jahia template module for using simple and advanced content search features.</description>
@@ -88,7 +88,7 @@
         <connection>scm:git:git@github.com:Jahia/search.git</connection>
         <developerConnection>scm:git:git@github.com:Jahia/search.git</developerConnection>
         <url>scm:git:git@github.com:Jahia/search.git</url>
-      <tag>7_1_0</tag>
+      <tag>7_x</tag>
   </scm>
 
     <properties>
