Updated SCM tag to HEAD

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <connection>scm:git:git@github.com:Jahia/search.git</connection>
         <developerConnection>scm:git:git@github.com:Jahia/search.git</developerConnection>
         <url>scm:git:git@github.com:Jahia/search.git</url>
-      <tag>7_1_x</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
